hostmenu fixes
theres like a 1 pixel gap on the left side for some reason, and i've now put the scrollbar inside so it looks kind of funky but that is the temporary solution

--- a/styles/GamesMenu.module.css
+++ b/styles/GamesMenu.module.css
@@ -67,12 +67,11 @@
 
 .gamesMenu header button:hover {
     color: #9293DD;
-
 }
 
 .gamesMenu header .logo {
     position: absolute;
-    top: 1.5vh;
+    top: calc(5px + 0.5vh);
     left: 2.5vw;
 }
 
@@ -83,6 +82,7 @@
 
 .gamesMenu header .logo p {
     position: absolute;
+    top: 0.5vh;
     left: 9vmin;
 
     font-family: Roboto Slab;
@@ -100,7 +100,7 @@
     }
 }
 
-@media all and (max-width: 900px) {
+@media all and (max-width: 400px), (max-height: 400px) {
     .gamesMenu header h1 {
         font-size: 15px;
     }
@@ -134,22 +134,22 @@
 }
 
 .gamesFrame .transparent {
-    position: absolute;
+    position: sticky;
     top: 1vh;
     left: 0.5vw;
     width: 99vw;
-    height: 76vh;
+    height: 75vh;
     box-shadow: 0 0 0 1000px #fff;
     border-radius: 10px;
     overflow: hidden;
 }
 
-.gamesFrame .scrolling-wrapper {
+.gamesFrame .scrollingWrapper {
     position: absolute;
     width: 100%;
-    height: 88.5%; /* this is hacky - i don't know how to actually properly make this height but 88.5% looks right*/
-    overflow-x: hidden;
+    height: 100%;
     overflow-y: auto;
+    scrollbar-width: thin;
 }
 
 .games {
@@ -157,13 +157,12 @@
     flex-direction: column;
     align-items: flex-start;
     align-content: center;
-    padding-top: 1vh;
     height: auto;
 }
 
 .games .game {
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 19vh;
     min-height: 80px;
     overflow: hidden;
@@ -173,14 +172,12 @@
     display: flex;
     flex-direction: row;
     position: absolute;
-    left: 0.5%;
     top: 5%;
-    width: 99%;
+    width: 100%;
     height: 90%;
     box-shadow: 0 0 0 10vmin #fff;
     border-radius: 5px;
     padding: 30px;
-    cursor: pointer;
 }
 
 .game .gameTransparent .text {
@@ -192,7 +189,6 @@
 .game .gameTransparent .panel {
     display: flex;
     flex-direction: column;
-    padding-top: 20px;
     width: 30%;
     padding-right: 5px;
 }
@@ -217,6 +213,16 @@
     letter-spacing: 0.1em;
 
     color: #6930C3;
+}
+
+.game .gameTransparent button {
+    border: none;
+    background: none;
+    cursor: pointer;
+}
+
+.game .gameTransparent button:hover {
+    color: #9293DD;
 }
 
 
